# WSL-AscendC

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCANN.cmake
docs/: AscendC_WSL2_实验报告.md  AscendC_add算子测试.md  AscendC_msopgen_算子工程搭建指南.md  AscendC_环境准备与调试总结.md
flash_attention/: flash_attention.json
flash_attention/FlashAttention/cmake/: config.cmake  func.cmake
flash_attention/FlashAttention/cmake/util/: ascendc_compile_kernel.py  ascendc_pack_kernel.py
flash_attention/FlashAttention/op_host/: CMakeLists.txt  flash_attention.cpp  flash_attention_tiling.h
flash_attention/FlashAttention/op_kernel/: CMakeLists.txt  flash_attention.cpp
include/: vector_add_kernel.h
scripts/: env.sh
src/: CMakeLists.txt  vector_add_kernel.cpp
test/: run_sim_test.py  test_vector_add.cpp
